--- a/read-data/read-data.csproj
+++ b/read-data/read-data.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>read_data</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
+  </ItemGroup>
+
 </Project>
